crates/textual-rs/tests/snapshots/snapshot_tests__large_terminal.snap
---
source: crates/textual-rs/tests/snapshot_tests.rs
expression: "format!(\"{}\", large.backend())"
---
"Hello, World!                           "
"                                        "
"                                        "
"                                        "
"                                        "
