crates/textual-rs/tests/snapshots/snapshot_tests__small_terminal.snap
---
source: crates/textual-rs/tests/snapshot_tests.rs
expression: "format!(\"{}\", small.backend())"
---
"Hello, Wor"
"          "
