crates/textual-rs/tests/snapshots/snapshot_tests__snapshot_greeting_widget.snap
---
source: crates/textual-rs/tests/snapshot_tests.rs
expression: "format!(\"{}\", test_app.backend())"
---
"Hello, World!       "
"                    "
"                    "
